// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`processDocsFunction should handle errors gracefully: errors 1`] = `
[
  {
    "content": "success content",
    "isSuccess": true,
    "path": "good-file.md",
    "resolvedPath": "/good-file.md",
  },
  {
    "content": "❌ Failed to load bad-file.md: File not found",
    "isSuccess": false,
    "path": "bad-file.md",
    "resolvedPath": "/bad-file.md",
  },
]
`;

exports[`processDocsFunction should process local and remote inputs, de-duplicate with first metadata 1`] = `
[
  {
    "content": "local file content",
    "isSuccess": true,
    "lorem": "ipsum",
    "path": "file.md",
    "resolvedPath": "/file.md",
  },
]
`;

exports[`processDocsFunction should process local and remote inputs, duplicate files and URLS 1`] = `
[
  {
    "content": "local file content",
    "isSuccess": true,
    "path": "file.md",
    "resolvedPath": "/file.md",
  },
  {
    "content": "fetched content",
    "isSuccess": true,
    "path": "https://example.com/remote.md",
    "resolvedPath": "https://example.com/remote.md",
  },
]
`;

exports[`processDocsFunction should process local and remote inputs, files and URLS 1`] = `
[
  {
    "content": "local file content",
    "isSuccess": true,
    "path": "local-file.md",
    "resolvedPath": "/local-file.md",
  },
  {
    "content": "fetched content",
    "isSuccess": true,
    "path": "https://example.com/remote.md",
    "resolvedPath": "https://example.com/remote.md",
  },
]
`;

exports[`processDocsFunction should process local and remote inputs, filter empty strings with varied input 1`] = `
[
  {
    "content": "local file content",
    "isSuccess": true,
    "path": "file.md",
    "resolvedPath": "/file.md",
  },
  {
    "content": "local file content",
    "isSuccess": true,
    "path": "file2.md",
    "resolvedPath": "/file2.md",
  },
]
`;

exports[`processDocsFunction should process local and remote inputs, metadata passthrough 1`] = `
[
  {
    "content": "local file content",
    "dolor": "sit",
    "isSuccess": true,
    "lorem": "ispum",
    "path": "file.md",
    "resolvedPath": "/file.md",
  },
]
`;

exports[`promiseQueue should execute promises in order: allSettled 1`] = `
[
  {
    "status": "fulfilled",
    "value": {
      "content": "/dolor-sit.md",
      "path": "dolor-sit.md",
      "resolvedPath": "/dolor-sit.md",
    },
  },
  {
    "reason": [Error: https://example.com/remote.md],
    "status": "rejected",
  },
  {
    "status": "fulfilled",
    "value": {
      "content": "/lorem-ipsum.md",
      "path": "lorem-ipsum.md",
      "resolvedPath": "/lorem-ipsum.md",
    },
  },
]
`;

exports[`resolveLocalPathFunction should return a consistent path, basic 1`] = `"/app/project/lorem-ipsum.md"`;

exports[`resolveLocalPathFunction should return a consistent path, documentation slug 1`] = `"/app/project/documentation/guidelines/README.md"`;

exports[`resolveLocalPathFunction should return a consistent path, relative path with valid navigation 1`] = `"/app/project/file.md"`;

exports[`resolveLocalPathFunction should return a consistent path, url, file 1`] = `"file://someDirectory/dolor-sit.md"`;

exports[`resolveLocalPathFunction should return a consistent path, url, http 1`] = `"http://example.com/dolor-sit.md"`;

exports[`resolveLocalPathFunction should return a consistent path, url, https 1`] = `"https://example.com/dolor-sit.md"`;
